--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "@babel/core": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@rollup/plugin-babel": "^5.1.0"
+  },
+  "dependencies": {
+    "binary-search": "^1.3.6"
   }
 }
