--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "@rollup/plugin-babel": "^5.1.0"
   },
   "dependencies": {
-    "binary-search": "^1.3.6"
+    "binary-search": "^1.3.6",
+    "clone": "^2.1.2",
+    "damerau-levenshtein": "^1.0.6",
+    "natural": "^5.0.3"
   }
 }
